$Id: History,v 1.38 2001-09-19 11:22:33 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Sep 19, 2001 H.Kurashige (run-V03-02-03)
- Modify G4VUserPhysicsList for STL migration of materials (Hisaya) 

Aug 02, 2001, G.Cosmo (run-V03-02-02)
- Add Set/GetApplyCuts methods in G4VUserPhysicsList (Hisaya)
- Add /run/particle/applyCuts command in G4UserPhysicsListMessenger (Hisaya)
- Updated revision number of G4RunManager.cc for reference tag.

Jul 18, 2001, M.Asai (run-V03-02-01)
- Add a new feature for the user to increase the number of waiting stacks
- Co-working with event-V03-02-02

Jul 15, 2001 
- Fixed bugs in G4VUserPhysicsList     (Hisaya)
--- Modify Store/RetreivePhysicsTable for new G4VProcess
--- Fixed bugs in StoreMaterialInfor and StoreCutValues in binary mode 
 
Jul 13, 2001, G.Cosmo (run-V03-02-00)
- Cleanup of pedantic warnings in Linux-g++ ANSI setup.
- Corrected "NULL" to "0".
- Synchronised with HEAD revision after inclusion of disclaimer
  liability.

Jun 22, 2001, M.Asai (run-V03-01-00)
- Tagging for the release

Mar. 12 2001, H.Kurashige
- add binary mode for G4VUserPhysicsList::Retrieve/StorePhysicsTable
- add G4VUserPhysicsList::RetrieveCutValues and related