@@ -1,4 +1,4 @@
-$Id: History,v 1.38 2001-09-19 11:22:33 kurasige Exp $
+$Id: History,v 1.39 2001-10-10 02:26:24 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Oct 10, 2001 H.Kurashige
+- Modify G4VUserPhysicsList::SetCutsForOthers to fix problems of
+   no invocation of RetreivePhysicsTable() for muons  
+   
 Sep 19, 2001 H.Kurashige (run-V03-02-03)
 - Modify G4VUserPhysicsList for STL migration of materials (Hisaya) 
 
